[package]
name = "ao-analytics-api"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.217" }
serde_json = "1.0.138"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "time",
    "chrono",
    "bigdecimal",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = { version = "*", git = "https://github.com/veqox/config-rs.git" }
